--- a/index.html
+++ b/index.html
@@ -5,66 +5,121 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Calculator</title>
+    <style>
+    * {
+  padding: 0;
+  margin: 0;
+}
+body {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #222831;
+  font-family: sans-serif;
+}
+.calculator {
+  width: 200px;
+  padding-bottom: 15px;
+  border-radius: 7px;
+  background-color: #000;
+  box-shadow: 5px 8px 8px -2px rgba(0, 0, 0, 0.61);
+}
+.display {
+  width: 100%;
+  height: 50px;
+  border: none;
+  box-sizing: border-box;
+  padding: 10px;
+  font-size: 2rem;
+  background-color: rgb(245, 151, 168);
+  color: #000;
+  text-align: right;
+  border-top-left-radius: 7px;
+  border-top-right-radius: 7px;
+}
+.row {
+  display: flex;
+  justify-content: space-between;
+}
+button {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: none;
+  outline: none;
+  font-size: 2rem;
+  background-color: #222;
+  color: #fff;
+  margin: 10px;
+  }
+  button:hover {
+  cursor: pointer;
+}
+.operator {
+  background-color: #FFC0CB;
+  color: #000;
+}
+
+</style>
 </head>
 
 <body>
-    
-<div class="container">
-	<div class="calc-container">
-
-		<h1>A Simple Calculator</h1>
-
-		<input id="box" value="" type="text" readonly placeholder="0"><br/>
-
-		<div class="btn-container">
-		<div class="row">
-				<button class="btn" onclick="shownum('1')"><strong>1</strong></button>
-				<button class="btn" onclick="shownum('2')"><strong>2</strong></button>
-				<button class="btn" onclick="shownum('3')"><strong>3</strong></button>
-				<button class="btn cbtn" onclick="delback()"><strong>⟸</strong></button>
-    </div>
-    <div class="row">
-      <button class="btn" onclick="shownum('4')"><strong>4</strong></button>
-      <button class="btn" onclick="shownum('5')"><strong>5</strong></button>
-      <button class="btn" onclick="shownum('6')"><strong>6</strong></button>
-      <button class="btn" onclick="shownum('+')"><strong>+</strong></button>
-  </div>
-  <div class="row">
-      <button class="btn" onclick="shownum('7')"><strong>7</strong></button>
-      <button class="btn" onclick="shownum('8')"><strong>8</strong></button>
-      <button class="btn" onclick="shownum('9')"><strong>9</strong></button>
-      <button class="btn" onclick="shownum('-')"><strong>-</strong></button>
-		</div>
-		<div class="row">
-				<button class="btn" onclick="shownum('.')"><strong>.</strong></button>
-				<button class="btn" onclick="shownum('0')"><strong>0</strong></button>
-				<button class="btn" onclick="shownum('00')"><strong>00</strong></button>
-				<button class="btn" onclick="shownum('*')"><strong>*</strong></button>
-				</div>
-        <div class="row">
-          <button class="btn cbtn" onclick="clearme()"><strong>C</strong></button>
-          <button class="btn solvebtn" onclick="solve()"><strong>=</strong></button>
-          <button class="btn" onclick="shownum('/')"><strong>/</strong></button>
-      </div>	
+    <div class="calculator">
+    <input type="text" class="display" disabled>
+    <div class="keys">
       <div class="row">
-				<button class="btn cbtn" onclick="clearme()"><strong>C</strong></button>
-				<button class="btn solvebtn" onclick="solve()"><strong>=</strong></button>
-				<button class="btn" onclick="shownum('/')"><strong>/</strong></button>
-		</div>	
+        <button value="7">7</button>
+        <button value="8">8</button>
+        <button value="9">9</button>
+        <button value="+" class="operator">+</button>
+      </div>
+      <div class="row">
+        <button value="4">4</button>
+        <button value="5">5</button>
+        <button value="6">6</button>
+        <button value="-" class="operator">-</button>
+      </div>
+      <div class="row">
+        <button value="1">1</button>
+        <button value="2">2</button>
+        <button value="3">3</button>
+        <button value="*" class="operator">*</button>
+      </div>
+      <div class="row">
+          <button value="C" class="operator">C</button>
+        <button value="0">0</button>
+        <button value="/" class="operator">/</button>
+        <button value="=" class="operator">=</button>
+      </div>
+    </div>
   </div>
-</div>
-</div>
-
-
-
+  
 </body>
 
 
 <script>
-function addition(a, b){
-    return a + b;
+const buttons = document.querySelectorAll('button');
+const display = document.querySelector('.display');
+buttons.forEach(function(button) {
+  button.addEventListener('click', calculate);
+});
+function calculate(event) {
+  const clickedButtonValue = event.target.value;
+  if (clickedButtonValue === '=') {
+    if (display.value !== '') 
+    {
+      display.value = eval(display.value);
+    }
+  } else if (clickedButtonValue === 'C') 
+  {
+    display.value = '';
+  } else {
+    display.value += clickedButtonValue;
+  }
 }
-
 
 </script>
 </html>
